{
    "name": "InputActions",
    "maps": [
        {
            "name": "Mouse",
            "id": "db119757-4105-4891-bcdb-60c86eb409cb",
            "actions": [
                {
                    "name": "LeftButton",
                    "type": "Button",
                    "id": "ab9704f0-47ef-4ffc-bda4-54da4646f046",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightButton",
                    "type": "Button",
                    "id": "2d159668-e82c-4436-933e-708da1389a9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "53cc2008-adbc-48da-8110-5b62ed515cd2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a28606c-5aea-43ac-a881-1ba0c69cda20",
                    "path": "<VirtualMouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}